--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^4.1.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^9.0.1",
@@ -33,6 +34,6 @@
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.1.0"
+    
   }
 }
